Add session management commands and refine session handling
Introduce management commands for database sessions, including `SESSION.ATTRIBUTE LIST` and `SESSION.ATTRIBUTE SET`. Removed the unused `UNSET` subcommand and updated session attribute parsing logic for better consistency. Enhanced documentation to reflect the new session management functionality.